--- a/manifests/controller/kustomization.yaml
+++ b/manifests/controller/kustomization.yaml
@@ -5,6 +5,10 @@ resources:
 - serviceaccount.yaml
 - clusterrolebinding.yaml
 - deployment.yaml
+configMapGenerator:
+- name: config
+  files:
+  - _examples=configmap-config-_examples.txt
 configurations:
 - kustomizeconfig/nameprefix.yaml
 commonLabels:
