--- a/manifests/debug/kustomization.yaml
+++ b/manifests/debug/kustomization.yaml
@@ -1,9 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ../default
-configMapGenerator:
-- name: config
-  behavior: merge
-  literals:
-  - debug=true
+- ../release
+transformers:
+- kustomizeconfig/annotations-deployment.yaml
