Add automatic webhook certificate generation

--- a/manifests/debug/kustomizeconfig/annotations-deployment.yaml
+++ b/manifests/debug/kustomizeconfig/annotations-deployment.yaml
@@ -3,7 +3,7 @@ kind: AnnotationsTransformer
 metadata:
   name: deployment
 annotations:
-  pvpool.puppet.com/debug: "true"
+  pvpool.puppet.com/config.debug: "true"
 fieldSpecs:
 - group: apps
   kind: Deployment
