--- a/manifests/controller/deployment.yaml
+++ b/manifests/controller/deployment.yaml
@@ -4,10 +4,15 @@ metadata:
   name: pvpool-controller
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      pvpool.puppet.com/selector: pvpool-controller
   template:
     metadata:
       annotations:
-        pvpool.puppet.com/debug: "false"
+        pvpool.puppet.com/config.debug: "false"
+      labels:
+        pvpool.puppet.com/selector: pvpool-controller
     spec:
       serviceAccountName: pvpool-controller
       containers:
@@ -17,7 +22,15 @@ spec:
         - name: PVPOOL_DEBUG
           valueFrom:
             fieldRef:
-              fieldPath: "metadata.annotations['pvpool.puppet.com/debug']"
+              fieldPath: "metadata.annotations['pvpool.puppet.com/config.debug']"
+        - name: PVPOOL_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: PVPOOL_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
