Fix webhook server and health probes

--- a/manifests/webhook-autocert/kustomization.yaml
+++ b/manifests/webhook-autocert/kustomization.yaml
@@ -15,3 +15,22 @@ commonLabels:
   app.kubernetes.io/name: pvpool
   app.kubernetes.io/component: webhook-autocert
   app.kubernetes.io/instance: pvpool-webhook-autocert
+patchesStrategicMerge:
+- |-
+  apiVersion: apps/v1
+  kind: Deployment
+  metadata:
+    name: pvpool-webhook
+  spec:
+    template:
+      spec:
+        volumes:
+        - name: pvpool-webhook-certificate
+          secret:
+            secretName: pvpool-webhook-certificate
+        containers:
+        - name: pvpool-webhook
+          volumeMounts:
+          - name: pvpool-webhook-certificate
+            mountPath: /tmp/k8s-webhook-server/serving-certs
+            readOnly: true
