--- a/manifests/webhook-autocert/kustomizeconfig/nameprefix.yaml
+++ b/manifests/webhook-autocert/kustomizeconfig/nameprefix.yaml
@@ -2,3 +2,7 @@ namePrefix:
 - group: apps
   kind: Deployment
   path: 'spec/template/metadata/annotations/pvpool.puppet.com\/config.webhook-certificate-secret-name'
+- group: apps
+  kind: Deployment
+  name: pvpool-webhook
+  path: 'spec/template/spec/volumes/secret/secretName'
