--- a/manifests/webhook/kustomization.yaml
+++ b/manifests/webhook/kustomization.yaml
@@ -1,7 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- generated/role.yaml
 - serviceaccount.yaml
+- clusterrolebinding.yaml
 - deployment.yaml
 - service.yaml
 - generated/manifests.yaml
