--- a/manifests/webhook-certificate-controller/kustomization.yaml
+++ b/manifests/webhook-certificate-controller/kustomization.yaml
@@ -1,19 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- generated/role.yaml
+- external
 - role.yaml
 - serviceaccount.yaml
 - clusterrolebinding.yaml
 - rolebinding.yaml
 - deployment.yaml
-configurations:
-- kustomizeconfig/nameprefix.yaml
 configMapGenerator:
-- name: pvpool-controller-config
+- name: pvpool-webhook-certificate-controller-config
   files:
   - _examples=configmap-config-_examples.txt
 commonLabels:
   app.kubernetes.io/name: pvpool
-  app.kubernetes.io/component: controller
-  app.kubernetes.io/instance: pvpool-controller
+  app.kubernetes.io/component: webhook-certificate-controller
+  app.kubernetes.io/instance: pvpool-webhook-certificate-controller
