--- a/manifests/webhook-certificate-controller/role.yaml
+++ b/manifests/webhook-certificate-controller/role.yaml
@@ -6,3 +6,9 @@ rules:
 - apiGroups: [""]
   resources: [secrets]
   verbs: [create]
+- apiGroups: [""]
+  resources: [events]
+  verbs: [create, patch]
+- apiGroups: [coordination.k8s.io]
+  resources: [leases]
+  verbs: [get, list, watch, create, update, delete]
