--- a/manifests/webhook/deployment.yaml
+++ b/manifests/webhook/deployment.yaml
@@ -3,31 +3,36 @@ kind: Deployment
 metadata:
   name: pvpool-webhook
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       pvpool.puppet.com/selector: pvpool-webhook
   template:
     metadata:
       annotations:
-        pvpool.puppet.com/config.debug: "false"
         cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
       labels:
         pvpool.puppet.com/selector: pvpool-webhook
     spec:
       serviceAccountName: pvpool-webhook
+      volumes:
+      - name: pvpool-webhook-certificate
+        secret:
+          secretName: $(PVPOOL_WEBHOOK_CERTIFICATE_SECRET_NAME)
       containers:
       - name: pvpool-webhook
         image: ko://github.com/puppetlabs/pvpool/cmd/pvpool-webhook
         env:
         - name: PVPOOL_DEBUG
           valueFrom:
-            fieldRef:
-              fieldPath: "metadata.annotations['pvpool.puppet.com/config.debug']"
+            configMapKeyRef:
+              name: pvpool-webhook-config
+              key: debug
+              optional: true
         - name: PVPOOL_NAME
           valueFrom:
             fieldRef:
-              fieldPath: metadata.name
+              fieldPath: "metadata.labels['app.kubernetes.io/instance']"
         - name: PVPOOL_NAMESPACE
           valueFrom:
             fieldRef:
@@ -38,6 +43,10 @@ spec:
             drop: [all]
           runAsUser: 65532
           runAsGroup: 65532
+        volumeMounts:
+        - name: pvpool-webhook-certificate
+          mountPath: /tmp/k8s-webhook-server/serving-certs
+          readOnly: true
         ports:
         - name: https
           containerPort: 9443
