--- a/examples/checkout.yaml
+++ b/examples/checkout.yaml
@@ -1,7 +1,7 @@
 apiVersion: pvpool.puppet.com/v1alpha1
 kind: Checkout
 metadata:
-  name: test-a
+  name: test-checkout-a
 spec:
   poolRef:
-    name: test
+    name: test-pool
