Make the maximum backoff duration for reconciliation configurable, default to 1 minute

--- a/manifests/controller/deployment.yaml
+++ b/manifests/controller/deployment.yaml
@@ -23,6 +23,12 @@ spec:
               name: pvpool-controller-config
               key: debug
               optional: true
+        - name: PVPOOL_CONTROLLER_MAX_RECONCILE_BACKOFF_DURATION
+          valueFrom:
+            configMapKeyRef:
+              name: pvpool-controller-config
+              key: max-reconcile-backoff-duration
+              optional: true
         - name: PVPOOL_NAME
           valueFrom:
             fieldRef:
